--- a/Documentation/Doxyfile.in
+++ b/Documentation/Doxyfile.in
@@ -586,8 +586,9 @@ USE_MATHJAX = YES
 # with spaces.
 #INPUT                  = ./include ./Documentation/dox ./modules/Wavelet/include ./modules/Merlin/include ./modules/FEM4EllipticPDE/include ./modules/EMSchur3D/include
 #INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/LemmaCore/include @CMAKE_CURRENT_SOURCE_DIR@/Modules/FEM4EllipticPDE.git/include
-INPUT   = @CMAKE_CURRENT_SOURCE_DIR@/LemmaCore/include @CMAKE_CURRENT_SOURCE_DIR@/Modules/*/include
+INPUT   = @CMAKE_CURRENT_SOURCE_DIR@/Modules/*/include
 INPUT  += @CMAKE_CURRENT_SOURCE_DIR@/Modules/
+INPUT  += @CMAKE_CURRENT_SOURCE_DIR@/Documentation/dox
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
