--- a/Modules/FDEM1D/testing/CMakeLists.txt
+++ b/Modules/FDEM1D/testing/CMakeLists.txt
@@ -1,3 +1,3 @@
-
+include_directories(${CXXTEST_INCLUDE_DIR})
 CXXTEST_ADD_TEST(unittestFEM1D_GetNameCheck GetNameCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/GetNameCheck.h)
 target_link_libraries(unittestFEM1D_GetNameCheck "lemmacore" "fdem1d")
