--- a/Documentation/Doxyfile.in
+++ b/Documentation/Doxyfile.in
@@ -27,6 +27,8 @@ DOXYFILE_ENCODING      = UTF-8
 
 PROJECT_NAME           = Lemma
 
+# Copies main logo so that the html and latex can find it
+PROJECT_LOGO           = @CMAKE_CURRENT_SOURCE_DIR@/Documentation/lemma.png
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number.
 # This could be handy for archiving the generated documentation or
@@ -588,7 +590,7 @@ USE_MATHJAX = YES
 #INPUT                  = @CMAKE_CURRENT_SOURCE_DIR@/LemmaCore/include @CMAKE_CURRENT_SOURCE_DIR@/Modules/FEM4EllipticPDE.git/include
 INPUT   = @CMAKE_CURRENT_SOURCE_DIR@/Modules/*/include
 INPUT  += @CMAKE_CURRENT_SOURCE_DIR@/Modules/
-INPUT  += @CMAKE_CURRENT_SOURCE_DIR@/Documentation/dox
+INPUT  += @CMAKE_CURRENT_SOURCE_DIR@/Documentation/
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
