Cleaning up, more.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -140,8 +140,8 @@ if ( LEMMA_VTK6_SUPPORT )
 	include(${VTK_USE_FILE}) 
 	add_compile_options(-DLEMMAUSEVTK) 
 	# Compile Matplot_vtk if VTK is present
-	add_subdirectory(Matplot_vtk)	
-	include_directories ("${PROJECT_SOURCE_DIR}/Matplot_vtk")
+	#add_subdirectory(Matplot_vtk)	
+	#include_directories ("${PROJECT_SOURCE_DIR}/Matplot_vtk")
 endif()
 
 option (LEMMA_VTK7_SUPPORT "VTK library for visualisation and grids" OFF)
@@ -154,8 +154,8 @@ if ( LEMMA_VTK7_SUPPORT )
 	include(${VTK_USE_FILE}) 
 	add_compile_options(-DLEMMAUSEVTK) 
 	# Compile Matplot_vtk if VTK is present
-	add_subdirectory(Matplot_vtk)	
-	include_directories ("${PROJECT_SOURCE_DIR}/Matplot_vtk")
+	#add_subdirectory(Matplot_vtk)	
+	#include_directories ("${PROJECT_SOURCE_DIR}/Matplot_vtk")
 endif()
 
 #####################
