--- a/Modules/LemmaCore/src/CMakeLists.txt
+++ b/Modules/LemmaCore/src/CMakeLists.txt
@@ -5,9 +5,9 @@ set (SOURCE
 	${CMAKE_CURRENT_SOURCE_DIR}/ASCIIParser.cpp                # fixed, key 
 	${CMAKE_CURRENT_SOURCE_DIR}/CubicSplineInterpolator.cpp    # fixed, key 
 	${CMAKE_CURRENT_SOURCE_DIR}/Grid.cpp                       # ABC, no key 
-	${CMAKE_CURRENT_SOURCE_DIR}/RectilinearGrid.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/RectilinearGridReader.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/RectilinearGridVTKExporter.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/RectilinearGrid.cpp            # fixed, key
+	${CMAKE_CURRENT_SOURCE_DIR}/RectilinearGridReader.cpp      # fixed, key
+	${CMAKE_CURRENT_SOURCE_DIR}/RectilinearGridVTKExporter.cpp # fixed, key
 	${CMAKE_CURRENT_SOURCE_DIR}/Filter.cpp                     # ABC, no key
 	${CMAKE_CURRENT_SOURCE_DIR}/WindowFilter.cpp			   # fixed, key
 	${CMAKE_CURRENT_SOURCE_DIR}/EarthModel.cpp                 # ABC, no key
