Work towards port of FDEM code to C++-11 and improved unit testing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -191,7 +191,7 @@ endif()
 set(LEMMA_VERSION_MAJOR "0")
 set(LEMMA_VERSION_MINOR "1")
 set(LEMMA_VERSION_PATCH "1")
-set(LEMMA_VERSION "${LEMMA_VERSION_MAJOR}.${LEMMA_VERSION_MINOR}.${LEMMA_VERSION_PATCH}")
+set(LEMMA_VERSION "\"${LEMMA_VERSION_MAJOR}.${LEMMA_VERSION_MINOR}.${LEMMA_VERSION_PATCH}\"")
 
 configure_file (
 	"${PROJECT_SOURCE_DIR}/config/LemmaConfig.h.in"
