--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -2,7 +2,7 @@ set (FEM1DSOURCE
 	${FEM1DSOURCE}
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEM.cpp
-	#${CMAKE_CURRENT_SOURCE_DIR}/FieldPoints.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/FieldPoints.cpp
 	#${CMAKE_CURRENT_SOURCE_DIR}/DipoleSource.cpp
 	#${CMAKE_CURRENT_SOURCE_DIR}/UngroundedElectricDipole.cpp
 	PARENT_SCOPE
