--- a/config/LemmaConfig.h.in
+++ b/config/LemmaConfig.h.in
@@ -20,4 +20,4 @@
 #define LEMMA_VERSION_MAJOR @LEMMA_VERSION_MAJOR@
 #define LEMMA_VERSION_MINOR @LEMMA_VERSION_MINOR@
 #define LEMMA_VERSION_PATCH @LEMMA_VERSION_PATCH@
-//#define LEMMA_VERSION @LEMMA_VERSION@
+#define LEMMA_VERSION @LEMMA_VERSION@
