Work towards port to C++-11.  Still not functioning, but a snapshot.

--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -3,7 +3,8 @@ set (FEM1DSOURCE
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEM.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FieldPoints.cpp
-	#${CMAKE_CURRENT_SOURCE_DIR}/DipoleSource.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/WireAntenna.cpp
+#	${CMAKE_CURRENT_SOURCE_DIR}/DipoleSource.cpp
 	#${CMAKE_CURRENT_SOURCE_DIR}/UngroundedElectricDipole.cpp
 	PARENT_SCOPE
 )
