--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -7,8 +7,10 @@ set (FEM1DSOURCE
 	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DManager.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/DipoleSource.cpp
 	
-	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DReflSpec.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DManager.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DSpec.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DReflSpec.cpp
+
 
 	#${CMAKE_CURRENT_SOURCE_DIR}/UngroundedElectricDipole.cpp
 	PARENT_SCOPE
