--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -1,11 +1,16 @@
-set (FEM1DSOURCE
-	${FEM1DSOURCE}
+set (FDEM1DSOURCE
+	${FDEM1DSOURCE}
+
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
+	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
+
 	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEM.cpp
+	
 	${CMAKE_CURRENT_SOURCE_DIR}/FieldPoints.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/WireAntenna.cpp
-	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DManager.cpp
+	
 	${CMAKE_CURRENT_SOURCE_DIR}/DipoleSource.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/WireAntenna.cpp
+
 	
 	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DManager.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DSpec.cpp
