--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -1,8 +1,7 @@
 set (FDEM1DSOURCE
 	${FDEM1DSOURCE}
 
-	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
-	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
+
 
 	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEM.cpp
 	
@@ -16,7 +15,11 @@ set (FDEM1DSOURCE
 	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DSpec.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DReflSpec.cpp
 
+	${CMAKE_CURRENT_SOURCE_DIR}/HankelTransform.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/FHTAnderson801.cpp
 
+	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
+	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
 	#${CMAKE_CURRENT_SOURCE_DIR}/UngroundedElectricDipole.cpp
 	PARENT_SCOPE
 )
