Added Key hankel class and polygonal wire antenna.

--- a/Modules/FDEM1D/examples/CMakeLists.txt
+++ b/Modules/FDEM1D/examples/CMakeLists.txt
@@ -4,7 +4,11 @@ target_link_libraries(  LayeredEarthEM  "lemmacore" "fdem1d")
 add_executable( FieldPoints FieldPoints.cpp  )
 target_link_libraries(  FieldPoints  "lemmacore" "fdem1d")
 
+add_executable( PolygonalWireAntenna PolygonalWireAntenna.cpp  )
+target_link_libraries(  PolygonalWireAntenna  "lemmacore" "fdem1d")
+
 INSTALL_TARGETS( "/share/FEM1D/"
 	LayeredEarthEM 
 	FieldPoints
+	PolygonalWireAntenna
 )
