--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -1,15 +1,13 @@
 set (FDEM1DSOURCE
 	${FDEM1DSOURCE}
 
-
-
 	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEM.cpp
 	
 	${CMAKE_CURRENT_SOURCE_DIR}/FieldPoints.cpp
 	
 	${CMAKE_CURRENT_SOURCE_DIR}/DipoleSource.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/WireAntenna.cpp
-
+	${CMAKE_CURRENT_SOURCE_DIR}/PolygonalWireAntenna.cpp
 	
 	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DManager.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/KernelEM1DSpec.cpp
@@ -17,6 +15,9 @@ set (FDEM1DSOURCE
 
 	${CMAKE_CURRENT_SOURCE_DIR}/HankelTransform.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FHTAnderson801.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey201.cpp
+	#${CMAKE_CURRENT_SOURCE_DIR}/FHTKey101.cpp
+	#${CMAKE_CURRENT_SOURCE_DIR}/FHTKey51.cpp
 
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
