Added more Hankel transforms and modified things a bit.

--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -16,8 +16,11 @@ set (FDEM1DSOURCE
 	${CMAKE_CURRENT_SOURCE_DIR}/HankelTransform.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FHTAnderson801.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey201.cpp
-	#${CMAKE_CURRENT_SOURCE_DIR}/FHTKey101.cpp
-	#${CMAKE_CURRENT_SOURCE_DIR}/FHTKey51.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey101.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey51.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/GQChave.cpp
+	#${CMAKE_CURRENT_SOURCE_DIR}/QWEKey.cpp
+	
 
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
