--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -19,8 +19,9 @@ set (FDEM1DSOURCE
 	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey101.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/FHTKey51.cpp
 	${CMAKE_CURRENT_SOURCE_DIR}/GQChave.cpp
-	#${CMAKE_CURRENT_SOURCE_DIR}/QWEKey.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/QWEKey.cpp
 	
+	${CMAKE_CURRENT_SOURCE_DIR}/EMEarth1D.cpp
 
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
 	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
