Fix of Lemma export

--- a/Modules/FDEM1D/examples/CMakeLists.txt
+++ b/Modules/FDEM1D/examples/CMakeLists.txt
@@ -7,6 +7,9 @@ target_link_libraries(  FieldPoints  "lemmacore" "fdem1d")
 add_executable( PolygonalWireAntenna PolygonalWireAntenna.cpp  )
 target_link_libraries(  PolygonalWireAntenna  "lemmacore" "fdem1d")
 
+add_executable( CircularLoop CircularLoop.cpp  )
+target_link_libraries(  CircularLoop  "lemmacore" "fdem1d")
+
 add_executable( EMDipEarth1D EMDipEarth1D.cpp  )
 target_link_libraries(  EMDipEarth1D  "lemmacore" "fdem1d")
 
