--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -220,7 +220,7 @@ endif()
 
 set(LEMMA_VERSION_MAJOR "0")
 set(LEMMA_VERSION_MINOR "1")
-set(LEMMA_VERSION_PATCH "1")
+set(LEMMA_VERSION_PATCH "2")
 set(LEMMA_VERSION "\"${LEMMA_VERSION_MAJOR}.${LEMMA_VERSION_MINOR}.${LEMMA_VERSION_PATCH}\"")
 set(LEMMA_VERSION_NOQUOTES "${LEMMA_VERSION_MAJOR}.${LEMMA_VERSION_MINOR}.${LEMMA_VERSION_PATCH}")
 
@@ -249,12 +249,21 @@ endif()
 add_subdirectory (Modules) 
 
 ########################################################################
-# add a target to generate API documentation with Doxygen
+# add a target to generate API documentation with Doxyfile.in 
 # ALL make documentation build by default if possible
 find_package(Doxygen)
 	if(DOXYGEN_FOUND)
 	option( LEMMA_BUILD_DOCUMENTATION  "Build Doxygen man pages" OFF )
 	if (LEMMA_BUILD_DOCUMENTATION)
+
+# Custom header and footer option, enable in Doxygen 
+#	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Documentation/header.html
+#        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Documentation/header.html
+#	)
+#	file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/Documentation/footer.html
+#        DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/Documentation/footer.html
+#	)
+
 	configure_file(${CMAKE_CURRENT_SOURCE_DIR}/Documentation/Doxyfile.in ${CMAKE_CURRENT_BINARY_DIR}/Documentation/Doxyfile @ONLY)
 		add_custom_target(doc
 			ALL
@@ -262,6 +271,7 @@ find_package(Doxygen)
 			WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
 			COMMENT "Generating API documentation with Doxygen" VERBATIM
 		)
+
 	endif (LEMMA_BUILD_DOCUMENTATION)
 	endif(DOXYGEN_FOUND)
 
