work towards AEM support again

--- a/Modules/FDEM1D/src/CMakeLists.txt
+++ b/Modules/FDEM1D/src/CMakeLists.txt
@@ -2,7 +2,7 @@ set (FDEM1DSOURCE
 	${FDEM1DSOURCE}
 
 	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEM.cpp
-#	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEMReader.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/LayeredEarthEMReader.cpp
 	
 	${CMAKE_CURRENT_SOURCE_DIR}/FieldPoints.cpp
 	
@@ -25,8 +25,9 @@ set (FDEM1DSOURCE
 	
 	${CMAKE_CURRENT_SOURCE_DIR}/EMEarth1D.cpp
 
-	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
-	#${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/AEMSurvey.cpp
+	${CMAKE_CURRENT_SOURCE_DIR}/AEMSurveyReader.cpp
+	
 	#${CMAKE_CURRENT_SOURCE_DIR}/UngroundedElectricDipole.cpp
 	PARENT_SCOPE
 )
