--- a/Modules/LemmaCore/testing/CMakeLists.txt
+++ b/Modules/LemmaCore/testing/CMakeLists.txt
@@ -4,12 +4,12 @@
 #add_test( testLemmaCoreTwo testTwo )
     	
 include_directories(${CXXTEST_INCLUDE_DIR})
-CXXTEST_ADD_TEST(unittest_GetNameCheck GetNameCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/GetNameCheck.h)
-target_link_libraries(unittest_GetNameCheck "lemmacore")
+CXXTEST_ADD_TEST(unittest_LemmaCore_GetNameCheck GetNameCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/GetNameCheck.h)
+target_link_libraries(unittest_LemmaCore_GetNameCheck "lemmacore")
 
-CXXTEST_ADD_TEST(unittest_SerializeCheck SerializeCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/SerializeCheck.h)
-target_link_libraries(unittest_SerializeCheck "lemmacore")
+CXXTEST_ADD_TEST(unittest_LemmaCore_SerializeCheck SerializeCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/SerializeCheck.h)
+target_link_libraries(unittest_LemmaCore_SerializeCheck "lemmacore")
 
-CXXTEST_ADD_TEST(unittest_CopyDisableCheck CopyDisableCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/CopyDisableCheck.h)
-target_link_libraries(unittest_CopyDisableCheck "lemmacore")
+CXXTEST_ADD_TEST(unittest_LemmaCore_CopyDisableCheck CopyDisableCheck.cc ${CMAKE_CURRENT_SOURCE_DIR}/CopyDisableCheck.h)
+target_link_libraries(unittest_LemmaCore_CopyDisableCheck "lemmacore")
  
