more roubust detection of OpenMP across compilers, inc. MSVC

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,7 +202,7 @@ include(CheckCXXCompilerFlag)
 CHECK_CXX_COMPILER_FLAG(-std=c++14 COMPILER_SUPPORTS_CXX14)
 CHECK_CXX_COMPILER_FLAG(-std=c++11 COMPILER_SUPPORTS_CXX11)
 CHECK_CXX_COMPILER_FLAG(-std=c++0x COMPILER_SUPPORTS_CXX0X)
-
+# TODO update this for MSVC and cross compatibility 
 if(COMPILER_SUPPORTS_CXX14)
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
 elseif(COMPILER_SUPPORTS_CXX11)
@@ -216,9 +216,11 @@ endif()
 option( LEMMA_BUILD_EXAMPLES "Compile example Lemma applications" OFF )
 
 option( LEMMA_USE_OPENMP  "Use OpenMP in Lemma" OFF)
-CHECK_CXX_COMPILER_FLAG(-fopenmp COMPILER_SUPPORTS_OPENMP)
-if(COMPILER_SUPPORTS_OPENMP AND LEMMA_USE_OPENMP )
-	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fopenmp -DLEMMAUSEOMP")
+find_package(OpenMP)
+if (OPENMP_FOUND AND LEMMA_USE_OPENMP)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
 endif()
 
 set(LEMMA_VERSION_MAJOR "0")
